--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -25,7 +25,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5202",
+      "applicationUrl": "http://192.168.89.181:7281",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
